--- a/block-BHaaan/index.html
+++ b/block-BHaaan/index.html
@@ -9,34 +9,39 @@
 </head>
 <body>
     <header>
-         <span>HOME</span>&nbsp;&nbsp;&nbsp;
-         <span>ABOUT</span>&nbsp;&nbsp;&nbsp;
-         <span>BLOG</span>&nbsp;&nbsp;&nbsp;
-        
+      <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Blog</a>
+      </nav>
     </header>
     <main>
-        <h2>NOVEMBER 20 2021</h2>
-        <img src="cat.jpg" alt="cat photos" width="500" height="300">
-        <section>
-          <h1>This Is My First Article.</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus rerum cum dolorum voluptatem soluta tempora fuga commodi repellendus incidunt minus necessitatibus repudiandae voluptas molestiae animi debitis ullam, sunt iusto doloremque accusamus saepe quibusdam? Consectetur, ratione. Corrupti placeat dolore odio labore fugiat nemo asperiores assumenda eius quia, officia at soluta temporibus animi quae deleniti repellat odit neque quasi sunt aut. Voluptatibus, nam eum! Odio dolorem, quaerat corrupti at commodi quo, perferendis sint doloribus adipisci iste numquam nesciunt enim? Autem, incidunt distinctio magnam nam velit iure illum voluptatem nihil corrupti quisquam nemo reiciendis iusto est molestias quas consequatur consequuntur inventore atque! Aut.</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae vero soluta magni aut temporibus voluptates magnam eaque eos optio repellat, saepe recusandae modi similique praesentium, dolorum nulla dignissimos dicta iste animi. Excepturi aliquid minus sed dignissimos quas incidunt, harum error alias unde nemo, architecto, facilis dolore deleniti nihil aliquam est! Sit nesciunt molestias quos nam sunt pariatur ipsum eligendi doloribus ipsa, quam quo veniam quas facere magni voluptas maxime quia aut praesentium porro aliquam? Officia fugit nemo voluptatibus consequatur necessitatibus.</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, repellat? Est quam sapiente consequatur, vitae autem nulla perferendis! Laborum odio possimus asperiores quos, obcaecati maxime aspernatur perferendis incidunt, non ex atque, laudantium amet doloribus repellendus molestias numquam nobis! Optio, ratione.</p>
-          <p style="color:blue"><stong>READ MORE</stong></p>
-          <hr style="margin-left: 400px;">
-          <h2>December 25 2021</h2>
-        <img src="cat1.jfif" alt="cat photos" width="500" height="300">
-        <section>
-          <h1>This Is  Another Article.</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus rerum cum dolorum voluptatem soluta tempora fuga commodi repellendus incidunt minus necessitatibus repudiandae voluptas molestiae animi debitis ullam, sunt iusto doloremque accusamus saepe quibusdam? Consectetur, ratione. Corrupti placeat dolore odio labore fugiat nemo asperiores assumenda eius quia, officia at soluta temporibus animi quae deleniti repellat odit neque quasi sunt aut. Voluptatibus, nam eum! Odio dolorem, quaerat corrupti at commodi quo, perferendis sint doloribus adipisci iste numquam nesciunt enim? Autem, incidunt distinctio magnam nam velit iure illum voluptatem nihil corrupti quisquam nemo reiciendis iusto est molestias quas consequatur consequuntur inventore atque! Aut.</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae vero soluta magni aut temporibus voluptates magnam eaque eos optio repellat, saepe recusandae modi similique praesentium, dolorum nulla dignissimos dicta iste animi. Excepturi aliquid minus sed dignissimos quas incidunt, harum error alias unde nemo, architecto, facilis dolore deleniti nihil aliquam est! Sit nesciunt molestias quos nam sunt pariatur ipsum eligendi doloribus ipsa, quam quo veniam quas facere magni voluptas maxime quia aut praesentium porro aliquam? Officia fugit nemo voluptatibus consequatur necessitatibus.</p>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, repellat? Est quam sapiente consequatur, vitae autem nulla perferendis! Laborum odio possimus asperiores quos, obcaecati maxime aspernatur perferendis incidunt, non ex atque, laudantium amet doloribus repellendus molestias numquam nobis! Optio, ratione.</p>
-          <p style="color:blue"><stong>READ MORE </stong></p>
+      <section> 
+        <p class="date">November 25 2015</p>
+        <article>
+         <img src="cat.jpg" alt="pussy cat">
+         <h1>This Is My First Article.</h1>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam debitis, in beatae incidunt et sequi quae explicabo mollitia adipisci odio obcaecati nesciunt temporibus dolorem minus.</p>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni voluptatibus maiores natus ipsam eum facilis voluptate ut porro impedit est. Consequatur facilis molestias, distinctio enim sit vero error, quis ex, praesentium harum cumque ratione impedit quaerat facere labore iure officiis ut cum? Rerum dolore </p>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptate dolorem quo dolore explicabo! Architecto reiciendis nam ullam cumque eos earum aspernatur, veniam voluptatibus assumenda!
 
-        </section>
+         </p>
+         
+        </article>
+        <hr>
+        <article>
+          <img src="cat1.jfif" alt="pussy cat">
+          <h1>This Is My Another Article.</h1>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam debitis, in beatae incidunt et sequi quae explicabo mollitia adipisci odio obcaecati nesciunt temporibus dolorem minus.</p>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni voluptatibus maiores natus ipsam eum facilis voluptate ut porro impedit est. Consequatur facilis molestias, distinctio enim sit vero error, quis ex, praesentium harum cumque ratione impedit quaerat facere labore iure officiis ut cum? Rerum dolore </p>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptate dolorem quo dolore explicabo! Architecto reiciendis nam ullam cumque eos earum aspernatur, veniam voluptatibus assumenda!
+
+
+        </article>
+      </section>
     </main>
     <footer>
-           <ul id="copyright">&copyAltcampus 2019</ul>
+      <small>&copy;AltCampus 2019</small>
     </footer>
 </body>
 </html>
